2013-03-19  Peter Bloomfield

	* src/main-window.c: use thread to check for new mail.

2013-03-17  Peter Bloomfield

	* src/mailbox-node.c (mb_rescan_cb): reopen mailboxes in the UI
	callback,
	(balsa_mailbox_node_rescan): not in the recursive function
	* src/balsa-app.c (balsa_open_mailbox_list): make sure first
	mailbox in the list is not hidden.

2013-03-17  Peter Bloomfield

	* src/balsa-app.c (open_mailbox_by_url),
	(balsa_open_mailbox_list): change gboolean
	open_mailboxes_idle_cb() to void balsa_open_mailbox_list().
	* src/balsa-app.h: ditto.
	* src/mailbox-node.c (balsa_mailbox_node_rescan): ditto.
	* src/main.c (open_mailboxes_idle_cb), (scan_mailboxes_idle_cb):
	open_mailboxes_idle_cb is now just the idle callback.

2013-03-17  Peter Bloomfield

	Reopen mailboxes after rescanning

	* src/mailbox-node.c (imap_dir_cb): do not unref mbnode;
	(imap_scan_create_mbnode): do not ref mbnode; protect view
	during rescanning;
	(balsa_mailbox_node_rescan): reopen mailboxes after scanning.

2013-03-17  Peter Bloomfield

	* libbalsa/libbalsa-conf.c (libbalsa_conf_sync),
	(libbalsa_conf_sync_idle_cb): remove source in public method.

2013-03-16  Peter Bloomfield

	* libbalsa/mailbox_local.c (lbm_local_queue_save_tree): build
	with threads disabled.

2013-03-16  Peter Bloomfield

	* libbalsa/libbalsa-conf.c (libbalsa_conf_sync_idle_cb),
	(libbalsa_conf_queue_sync): fix error and use lock only when
	using threads.

2013-03-16  Peter Bloomfield

	Queue config syncs instead of syncing immediately, except on
	exit cleanup

	* libbalsa/libbalsa-conf.c (libbalsa_conf_sync_idle_cb),
	(libbalsa_conf_queue_sync): new API libbalsa_conf_queue_sync.
	* libbalsa/libbalsa-conf.h: ditto.
	* src/ab-main.c (address_book_change), (file_delete_cb): use it.
	* src/save-restore.c (config_address_book_save),
	(config_address_book_delete), (config_mailbox_add),
	(config_folder_add), (config_mailbox_delete),
	(config_folder_delete), (config_mailbox_update),