@@ -143,12 +143,8 @@ gboolean libbalsa_abort_on_timeout(const char *host);
 #include <pthread.h>
 pthread_t libbalsa_get_main_thread(void);
 gboolean libbalsa_am_i_subthread(void);
-void libbalsa_threads_init(void);
-void libbalsa_threads_destroy(void);
-gboolean libbalsa_threads_has_lock(void);
 #else
 #define libbalsa_am_i_subthread() FALSE
-#define libbalsa_threads_has_lock() TRUE
 #endif /* BALSA_USE_THREADS */
 #if defined(BALSA_DEBUG_THREADS)
 #define gdk_threads_enter()                       \
