@@ -257,8 +257,6 @@ threads_init(void)
 {
     g_type_init();
 
-    libbalsa_threads_init();
-
     pthread_mutex_init(&send_messages_lock, NULL);
     if (pipe(mail_thread_pipes) < 0) {
 	g_log("BALSA Init", G_LOG_LEVEL_DEBUG,
@@ -288,7 +286,6 @@ threads_destroy(void)
 {
     pthread_mutex_destroy(&checking_mail_lock);
     pthread_mutex_destroy(&send_messages_lock);
-    libbalsa_threads_destroy();
 }
 
 #endif				/* BALSA_USE_THREADS */
